--- a/src/components/front/front-vacancy/pages/elem-invite.html
+++ b/src/components/front/front-vacancy/pages/elem-invite.html
@@ -13,6 +13,11 @@
 
 <ol reversed>
   <li>
+    8 апреля 2024 Web-разработчик (Инженер-программист)(01050-1)
+    <br><strong>Моринформсистема-Агат, Концерн</strong>
+    <br>Москва от 120 000 ₽ на руки
+  </li>
+  <li>
     3 апреля 2024 Стажер-разработчик в отдел развития внутренних сервисов
     <br><strong>Ренессанс Банк, Москва</strong>
     <br>Москва з/п не указана
