--- a/src/components/front/front-vacancy/pages/elem-noanswer.html
+++ b/src/components/front/front-vacancy/pages/elem-noanswer.html
@@ -12,6 +12,10 @@
 <h3>Список вакансий без ответа</h3>
 
 <ol reversed>
+  <li>7 апреля 2024 Frontend-разработчик (Воронеж)
+    <br><strong>ГК АРСА</strong>
+    <br>Воронеж з/п не указана
+  </li>
   <li>3 апреля 2024 Front End Developer (React)
     <br><strong>Axenix (ранее Accenture)</strong>
     <br>Воронеж з/п не указана
