--- a/src/components/front/front-vacancy/pages/elem-refuse.html
+++ b/src/components/front/front-vacancy/pages/elem-refuse.html
@@ -13,6 +13,26 @@
 
 <ol reversed>
   <li>
+    8 апреля 2024 FullStack разработчик (middle)
+    <br><strong>Деньги на дом</strong>
+    <br>Воронеж до 200 000 ₽ до вычета налогов
+  </li>
+  <li>
+    8 апреля 2024 Frontend developer (React)
+    <br><strong>Enjoypro</strong>
+    <br>Москва от 180 000 до 230 000 ₽ на руки
+  </li>
+  <li>
+    8 апреля 2024 Middle JavaScript/TypeScript-разработчик
+    <br><strong>SoftGamings</strong>
+    <br>Воронеж от 150 000 ₽ на руки
+  </li>
+  <li>
+    4 апреля 2024 Middle/Senior frontend-разработчик (JavaScript и TypeScript)
+    <br><strong>ALFA system</strong>
+    <br>Москва з/п не указана
+  </li>
+  <li>
     2 апреля 2024 Frontend-разработчик
     <br><strong>Кэрот Бродкаст</strong>
     <br>Москва от 60 000 до 120 000 ₽ на руки
