--- a/src/components/header/elem-header.html
+++ b/src/components/header/elem-header.html
@@ -1,11 +1,17 @@
-<div class="header__first-row container">
-  <div class="header__logo">frontend200tb</div>
-  <div id="header__nav" class="header__nav"></div>  
-</div>
+<div class="container">
+  <header class="header header-stick page_dodgerblue">
 
-<div class="header__second-row container">
-  <social-icons></social-icons>
-  <settings-component></settings-component>
-</div>
+    <div class="header__1">
+      <div class="header__logo">frontend200tb</div>
+      <div id="header__nav" class="header__nav"></div>  
+    </div>
 
-<search-form></search-form>
+    <div class="header__2">
+      <social-icons></social-icons>
+      <settings-component></settings-component>
+    </div>
+
+    <search-form></search-form>
+
+  </header>
+</div>
