--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,7 +1,3 @@
-/*********************
-header__first-row
-*********************/
-
 .header-stick {
   position: fixed;
   top: 0;
@@ -10,13 +6,44 @@ header__first-row
   padding: 0 10px;
 }
 
-.header__first-row {
+@media (max-width: 580px) {
+  .header-stick {
+    position: static;
+    padding: 0;
+  }
+}
+
+
+/*********************
+header__1
+*********************/
+
+.header__1 {
   display: flex;
-  margin-bottom: 16px;
-  flex-wrap: wrap;
+  flex-direction: row;
   justify-content: space-between;
+  flex-wrap: wrap;
+  margin-bottom: 16px;
   font-family: monospace, sans-serif;
 }
+
+@media (max-width: 580px) {
+  .header__1 {
+    flex-direction: column;
+    gap: 20px;
+    max-width: 90vw;
+  }
+
+  .header__logo {
+    text-align: center;
+  }
+
+  .header__nav {
+    text-align: center;
+  }
+}
+/*---------------*/
+
 
 .header__logo {
   display: block;
@@ -41,18 +68,27 @@ header__first-row
 .header__nav a:hover {
   border-bottom: 3px solid white;
 }
+/* Конец header__1 */
 
-/* Конец header__first-row */
 
 /*********************
-header__second-row
+header__2
 *********************/
-
-.header__second-row {
+.header__2 {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: row;
   justify-content: space-between;
+  flex-wrap: wrap;
   font-family: monospace, sans-serif;
 }
 
-/* Конец header__second-row */
+@media (max-width: 580px) {
+  .header__2 {
+    flex-direction: column;
+    gap: 20px;
+    max-width: 90vw;
+  }
+}
+/*---------------*/
+
+/* Конец header__2 */
